WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
205457
REGRESSION (
r253530
): Incorrect colors in Dark Mode
https://bugs.webkit.org/show_bug.cgi?id=205457
Summary
REGRESSION (r253530): Incorrect colors in Dark Mode
Per Arne Vollan
Reported
2019-12-19 09:29:57 PST
The commit
https://trac.webkit.org/changeset/253530/webkit
caused incorrect colors to be used in Dark Mode.
Attachments
Patch
(24.14 KB, patch)
2019-12-19 09:35 PST
,
Per Arne Vollan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Per Arne Vollan
Comment 1
2019-12-19 09:32:19 PST
rdar://problem/58062688
Per Arne Vollan
Comment 2
2019-12-19 09:35:04 PST
Created
attachment 386112
[details]
Patch
WebKit Commit Bot
Comment 3
2019-12-19 13:20:40 PST
Comment on
attachment 386112
[details]
Patch Clearing flags on attachment: 386112 Committed
r253784
: <
https://trac.webkit.org/changeset/253784
>
WebKit Commit Bot
Comment 4
2019-12-19 13:20:41 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug