REGRESSION (r253530): Incorrect colors in Dark Mode https://bugs.webkit.org/show_bug.cgi?id=205457

Unreviewed rollout of r253530.


Source/WebCore:

* WebCore.xcodeproj/project.pbxproj:
* rendering/CSSValueKey.h: Removed.
* rendering/RenderThemeIOS.h:
* rendering/RenderThemeIOS.mm:
(WebCore::RenderThemeIOS::systemColor const):
(WebCore::cssValueIDSelectorList): Deleted.
(WebCore::systemColorFromCSSValueID): Deleted.
(WebCore::globalCSSValueToSystemColorMap): Deleted.
(WebCore::RenderThemeIOS::getOrCreateCSSValueToSystemColorMap): Deleted.
(WebCore::RenderThemeIOS::setCSSValueToSystemColorMap): Deleted.

Source/WebKit:

* Shared/WebProcessCreationParameters.cpp:
(WebKit::WebProcessCreationParameters::encode const):
(WebKit::WebProcessCreationParameters::decode):
* Shared/WebProcessCreationParameters.h:
* UIProcess/Cocoa/WebProcessPoolCocoa.mm:
(WebKit::WebProcessPool::platformInitializeWebProcess):
* WebProcess/cocoa/WebProcessCocoa.mm:
(WebKit::WebProcess::platformInitializeWebProcess):


Canonical link: https://commits.webkit.org/218668@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@253784 268f45cc-cd09-0410-ab3c-d52691b4dbfc