Source/WebKit/Shared/WebProcessCreationParameters.cpp
@@ -171,10 +171,6 @@ void WebProcessCreationParameters::encode(IPC::Encoder& encoder) const
     encoder << neSessionManagerExtensionHandle;
 #endif
 
-#if PLATFORM(IOS)
-    encoder << cssValueToSystemColorMap;
-#endif
-
 #if PLATFORM(IOS_FAMILY)
     encoder << currentUserInterfaceIdiomIsPad;
 #endif
@@ -442,14 +438,6 @@ bool WebProcessCreationParameters::decode(IPC::Decoder& decoder, WebProcessCreat
     if (!neSessionManagerExtensionHandle)
         return false;
     parameters.neSessionManagerExtensionHandle = WTFMove(*neSessionManagerExtensionHandle);
-#endif
-
-#if PLATFORM(IOS)
-    Optional<HashMap<WebCore::CSSValueKey, WebCore::Color>> cssValueToSystemColorMap;
-    decoder >> cssValueToSystemColorMap;
-    if (!cssValueToSystemColorMap)
-        return false;
-    parameters.cssValueToSystemColorMap = WTFMove(*cssValueToSystemColorMap);
 #endif
 
 #if PLATFORM(IOS_FAMILY)
